--- a/src/Recipe.module.css
+++ b/src/Recipe.module.css
@@ -3,10 +3,12 @@
     box-shadow: 0px 5px 20px rgb(71, 71, 71);    
     margin : 20px;
     display : flex;
+    flex : 3; 
     flex-direction: column;
     justify-content: center;
     align-items: center;
     min-width: 40%;
+    background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
 }
 .image{
     border-radius : 50%;
