--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,22 @@
-.App{
-  background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%);
-  min-height : 100vh
+.App {
+  text-align: center;
 }
-.search-form{
-  min-height: 10vh;
-  display : flex;
-  justify-content: center;
-  align-items: center
-}
-.search-bar{
-  width: 50%;
-  border: none;
-  padding : 10px;
 
+.App-logo {
+  height: 40vmin;
 }
-.search-button{
-  background : lightcoral;
-  border : none;
-  padding : 10px 20px;
-  color : white
-}
-.Recipes{
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  flex : 3
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #09d3ac;
 }
