setting home page

--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,47 @@
   box-sizing : border-box;
   margin : 0px;
   padding : 0px;
+ 
+}
+html,body{
+  height : 100%
+}
+.bg{
+  background-image: url(./images/bg.jpg);
+  background-size : cover;
+  background-position : center;
+  height : 100vh;
+}
+.App-header{
+  text-align: center;
+  /* background : black; */
+  color : white
+}
+.App-header ul{
+  text-align : center;
+  margin : auto
+}
+.App-header li{
+  margin : 20px 20px;
+  list-style-type: none;
+  display: inline-block
+  
+}
+.search-form{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top : 40%
+}
+.search-field{
+  padding : 10px;
+  width : 50%;
+  border : none
+}
+.search-button{
+  
+  padding : 10px;
+  border : none;
+  color : black;
+  background-color : whitesmoke
 }
